Animations fixed, dark mode fixed

--- a/Saving Stacks/src/application/view/list_view_dark.css
+++ b/Saving Stacks/src/application/view/list_view_dark.css
@@ -5,3 +5,6 @@
 .list-cell:odd {
      -fx-background-color: #25282f
 }
+.list-cell:selected {
+	-fx-background-color: black;
+}
